tests/errors/E025.zen
void main() {
    return 1;       // E025: Void function should not return a value
}